Continue working on sync task

--- a/app/views/admin/forest/shopify/products/_form.html.erb
+++ b/app/views/admin/forest/shopify/products/_form.html.erb
@@ -16,6 +16,7 @@
                 <%= f.input :description_html %>
                 <%= f.input :handle %>
                 <%= f.input :shopify_id, label: 'Shopify ID' %>
+                <%= f.input :shopify_id_base64, label: 'Shopify ID (base64 encoded)' %>
                 <%= f.input :product_type %>
                 <%= f.input :shopify_published_at, as: :datepicker %>
                 <%= f.input :title %>
