Create variants and sync with products

--- a/app/views/admin/forest/shopify/products/_form.html.erb
+++ b/app/views/admin/forest/shopify/products/_form.html.erb
@@ -25,6 +25,7 @@
               <div class="col-md-6">
                 <%= render 'admin/form_inputs/status', f: f, record: @product %>
               </div>
+              <%# TODO: show variants %>
             </div>
           </div>
         </div>
