--- a/app/views/admin/forest/shopify/products/_form.html.erb
+++ b/app/views/admin/forest/shopify/products/_form.html.erb
@@ -10,22 +10,22 @@
             <div class="row small-gutters">
               <div class="col-md-6">
                 <%= render 'admin/form_inputs/slug', f: f %>
-                <%= f.input :available_for_sale %>
-                <%= f.input :shopify_created_at, as: :datepicker %>
-                <%= f.input :description %>
-                <%= f.input :description_html %>
-                <%= f.input :handle %>
-                <%= f.input :shopify_id, label: 'Shopify ID' %>
-                <%= f.input :shopify_id_base64, label: 'Shopify ID (base64 encoded)' %>
-                <%= f.input :product_type %>
-                <%= f.input :shopify_published_at, as: :datepicker %>
-                <%= f.input :title %>
+                <%= f.input :available_for_sale, disabled: true %>
+                <%= f.input :title, disabled: true %>
+                <%= f.input :shopify_created_at, as: :datepicker, disabled: true %>
+                <%= f.input :description, disabled: true %>
+                <%= f.input :description_html, disabled: true %>
+                <%= f.input :handle, disabled: true %>
+                <%= f.input :shopify_id, label: 'Shopify ID', disabled: true %>
+                <%= f.input :shopify_id_base64, label: 'Shopify ID (base64 encoded)', disabled: true %>
+                <%= f.input :product_type, disabled: true %>
+                <%= f.input :shopify_published_at, as: :datepicker, disabled: true %>
                 <%= f.button :submit, class: 'btn-success d-md-none' %>
               </div>
               <div class="col-md-6">
                 <%= render 'admin/form_inputs/status', f: f, record: @product %>
                 <% if @product.media_items.present? %>
-                  <label>Images</label>
+                  <label>Shopify Images</label>
                   <div class="row small-gutters">
                     <% @product.media_items.each do |media_item| %>
                       <div class="col-6 mb-3">
