--- a/app/views/admin/forest/shopify/variants/_form.html.erb
+++ b/app/views/admin/forest/shopify/variants/_form.html.erb
@@ -10,19 +10,26 @@
             <div class="row small-gutters">
               <div class="col-md-6">
                 <%= render 'admin/form_inputs/slug', f: f %>
-                <%= f.input :title %>
-                <%= f.input :shopify_id_base64 %>
-                <%= f.input :price %>
-                <%= f.input :available_for_sale %>
-                <%= f.input :compare_at_price %>
-                <%= f.input :sku %>
-                <%= f.input :weight %>
-                <%= f.input :weight_unit %>
-                <%= f.association :product %>
+                <%= f.input :available_for_sale, disabled: true %>
+                <%= f.input :title, disabled: true %>
+                <%= f.input :shopify_id_base64, disabled: true %>
+                <%= f.input :price, disabled: true %>
+                <%= f.input :compare_at_price, disabled: true %>
+                <%= f.input :sku, disabled: true %>
+                <%= f.input :weight, disabled: true %>
+                <%= f.input :weight_unit, disabled: true %>
                 <%= f.button :submit, class: 'btn-success d-md-none' %>
               </div>
               <div class="col-md-6">
                 <%= render 'admin/form_inputs/status', f: f, record: @variant %>
+                <% if @variant.product.present? %>
+                  <label>Product</label>
+                  <ul>
+                    <li>
+                      <%= link_to @variant.product.title, edit_admin_forest_shopify_product_path(@variant.product) %>
+                    </li>
+                  </ul>
+                <% end %>
               </div>
             </div>
           </div>
