--- a/app/views/admin/forest/shopify/products/_form.html.erb
+++ b/app/views/admin/forest/shopify/products/_form.html.erb
@@ -44,8 +44,27 @@
                     <% end %>
                   </ul>
                 <% end %>
+
+                <% if @product.product_options.present? %>
+                  <label>Product Options</label>
+                  <ul>
+                    <% @product.product_options.each do |product_option| %>
+                      <li><%= product_option.name %>: <%= product_option.values.try(:join, ', ') %></li>
+                    <% end %>
+                  </ul>
+                <% end %>
+
+                <% if @product.variants.present? %>
+                  <label>Variants</label>
+                  <ul>
+                    <% @product.variants.each do |variant| %>
+                      <li>
+                        <%= link_to variant.title, edit_admin_forest_shopify_variant_path(variant) %>
+                      </li>
+                    <% end %>
+                  </ul>
+                <% end %>
               </div>
-              <%# TODO: show variants %>
             </div>
           </div>
         </div>
