--- a/app/views/admin/forest/shopify/products/_form.html.erb
+++ b/app/views/admin/forest/shopify/products/_form.html.erb
@@ -9,7 +9,7 @@
           <div class="form-inputs">
             <div class="row small-gutters">
               <div class="col-md-6">
-                <%= render 'admin/form_inputs/slug', f: f, disabled: true %>
+                <%= render 'admin/form_inputs/slug', f: f, hidden: true %>
                 <%= f.input :available_for_sale, disabled: true %>
                 <%= f.input :title, disabled: true %>
                 <%= f.input :shopify_created_at, as: :datepicker, disabled: true %>
@@ -23,7 +23,7 @@
                 <%= f.button :submit, class: 'btn-success d-md-none' %>
               </div>
               <div class="col-md-6">
-                <%= render 'admin/form_inputs/status', f: f, record: @product, disabled: true, hint: 'To hide a product, edit the product in Shopify and remove the product from the Forest CMS sales channel (do this in Shopify by setting the product to draft, deleting the product, or explicitly removing the Forest CMS sales channel).' %>
+                <%= render 'admin/form_inputs/status', f: f, record: @product, disabled: true, hint: 'To hide a product, open it in Shopify and do one of the following: remove the product from the Forest CMS sales channel, set the product to draft or delete the product.' %>
                 <% if @product.media_items.present? %>
                   <label>Shopify Images</label>
                   <div class="row small-gutters">
