--- a/app/views/admin/forest/shopify/variants/_form.html.erb
+++ b/app/views/admin/forest/shopify/variants/_form.html.erb
@@ -9,7 +9,7 @@
           <div class="form-inputs">
             <div class="row small-gutters">
               <div class="col-md-6">
-                <%= render 'admin/form_inputs/slug', f: f, disabled: true %>
+                <%= render 'admin/form_inputs/slug', f: f, hidden: true %>
                 <%= f.input :available_for_sale, disabled: true %>
                 <%= f.input :title, disabled: true %>
                 <%= f.input :shopify_id_base64, disabled: true %>
