--- a/app/views/admin/forest/shopify/collections/_form.html.erb
+++ b/app/views/admin/forest/shopify/collections/_form.html.erb
@@ -21,7 +21,7 @@
               </div>
               <div class="col-md-6">
                 <%= render 'admin/form_inputs/status', f: f, record: @collection, disabled: true %>
-                <%= image_tag @collection.media_item.attachment_url(:medium) if @collection.media_item.present? %>
+                <%= link_to image_tag(@collection.media_item.attachment_url(:medium)), edit_admin_media_item_path(@collection.media_item), class: 'blank-link mb-3 d-inline-block', target: '_blank' if @collection.media_item.present? %>
                 <% if @collection.products.present? %>
                   <label>Products</label>
                   <ul>
