Add position to variant and sort by position

--- a/app/views/admin/forest/shopify/variants/_form.html.erb
+++ b/app/views/admin/forest/shopify/variants/_form.html.erb
@@ -18,6 +18,7 @@
                 <%= f.input :sku, disabled: true %>
                 <%= f.input :weight, disabled: true %>
                 <%= f.input :weight_unit, disabled: true %>
+                <%= f.input :position, disabled: true %>
                 <%= f.button :submit, class: 'btn-success d-md-none' %>
               </div>
               <div class="col-md-6">
