--- a/app/views/admin/forest/shopify/collections/_form.html.erb
+++ b/app/views/admin/forest/shopify/collections/_form.html.erb
@@ -22,6 +22,7 @@
               <div class="col-md-6">
                 <%= render 'admin/form_inputs/status', f: f, record: @collection, disabled: true %>
                 <%= link_to image_tag(@collection.media_item.attachment_url(:medium)), edit_admin_media_item_path(@collection.media_item), class: 'blank-link mb-3 d-inline-block', target: '_blank' if @collection.media_item.present? %>
+                <%# TODO: Move the collection products into a paginated table view %>
                 <% if @collection.products.present? %>
                   <label>Products</label>
                   <ul>
