--- a/app/views/admin/forest/shopify/collections/_form.html.erb
+++ b/app/views/admin/forest/shopify/collections/_form.html.erb
@@ -1,7 +1,15 @@
 <%= simple_form_for([:admin, :forest, :shopify, @collection]) do |f| %>
   <%= f.error_notification %>
   <div class="row small-gutters">
-    <%= render 'admin/shared/edit/sidebar', f: f, record: @collection %>
+    <% if forest_shopify_domain.present? %>
+      <% sidebar_content = capture do %>
+        <%= link_to "https://#{forest_shopify_domain}/admin/collections/#{@collection.shopify_id}", target: '_blank' do %>
+          View in Shopify
+          <%= bootstrap_icon 'box-arrow-up-right', embedded: true %>
+        <% end %>
+      <% end %>
+    <% end %>
+    <%= render 'admin/shared/edit/sidebar', f: f, record: @collection, additional_content: sidebar_content %>
     <div class="col-md-9">
       <div class="card">
         <h1 class="h2 card-header"><%= record_name(@collection) %></h1>
@@ -10,32 +18,62 @@
             <div class="row small-gutters">
               <div class="col-md-6">
                 <%= render 'admin/form_inputs/slug', f: f, hidden: true %>
+                <%= f.input :title, disabled: true %>
+                <%= f.input :handle, disabled: true %>
                 <%= f.input :description, disabled: true %>
                 <%= f.input :description_html, disabled: true %>
-                <%= f.input :handle, disabled: true %>
-                <%= f.input :shopify_id, label: 'Shopify ID', disabled: true %>
-                <%= f.input :shopify_id_base64, label: 'Shopify ID (base64 encoded)', disabled: true %>
                 <%= f.input :shopify_updated_at, as: :datepicker, disabled: true %>
-                <%= f.input :title, disabled: true %>
                 <%= f.button :submit, class: 'btn-success d-md-none' %>
               </div>
               <div class="col-md-6">
                 <%= render 'admin/form_inputs/status', f: f, record: @collection, disabled: true %>
-                <%= link_to image_tag(@collection.media_item.attachment_url(:medium)), edit_admin_media_item_path(@collection.media_item), class: 'blank-link mb-3 d-inline-block', target: '_blank' if @collection.media_item.present? %>
-                <%# TODO: Move the collection products into a paginated table view %>
-                <% if @collection.products.present? %>
-                  <label>Products</label>
-                  <ul>
-                    <% @collection.products.each do |product| %>
-                      <li>
-                        <%= link_to product.title, edit_admin_forest_shopify_product_path(product) %>
-                      </li>
-                    <% end %>
-                  </ul>
+                <%= f.input :shopify_id, label: 'Shopify ID', disabled: true %>
+                <%= f.input :shopify_id_base64, label: 'Shopify ID (base64 encoded)', disabled: true %>
+                <% if @collection.media_item.present? %>
+                  <label>Collection image</label>
+                  <%= link_to image_tag(@collection.media_item.attachment_url(:medium)), edit_admin_media_item_path(@collection.media_item), class: 'blank-link mb-3 d-inline-block', target: '_blank' %>
                 <% end %>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="card mt-3">
+        <h1 class="h3 card-header">Products</h1>
+        <div class="card-body">
+          <div class="form-inputs">
+            <div class="row small-gutters mb-n2">
+              <% if @products.present? %>
+                <% @products.each do |product| %>
+                  <div class="col-6 col-md-4 col-lg-3 mb-2">
+                    <div class="row small-gutters align-items-center">
+                      <div class="col-auto">
+                        <% if product.featured_media_item.present? %>
+                          <%= link_to edit_admin_forest_shopify_product_path(product), class: 'd-inline-block' do %>
+                            <%= image_tag product.featured_media_item.attachment_url(:thumb), style: 'width: 50px; height: 50px;' %>
+                          <% end %>
+                        <% else %>
+                          <div style="width: 50px; height: 50px;"></div>
+                        <% end %>
+                      </div>
+                      <div class="col-8">
+                        <%= link_to product.title, edit_admin_forest_shopify_product_path(product) %>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+              <% else %>
+              <div class="col-12">
+                This collection has no products.
+              </div>
+              <% end %>
+            </div>
+          </div>
+          <% if @pagy.pages > 1 %>
+            <div class="mt-3 mb-n3">
+              <%= pagy_bootstrap_nav_js(@pagy).html_safe %>
+            </div>
+          <% end %>
         </div>
       </div>
       <%# Uncomment the following partial if the record is blockable. Optionally pass the block_layout or block_kinds to the partial. %>
