--- a/app/views/admin/forest/shopify/products/_form.html.erb
+++ b/app/views/admin/forest/shopify/products/_form.html.erb
@@ -104,6 +104,22 @@
           </div>
         </div>
       <% end %>
+      <% if @product.product_tags.present? %>
+        <div class="card mt-3">
+          <h1 class="h3 card-header">Product Tags</h1>
+          <div class="card-body">
+            <div class="form-inputs">
+              <div class="row small-gutters">
+                <% @product.product_tags.each do |product_tag| %>
+                  <div class="col-4">
+                    <%= product_tag.name %>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
       <% if @product.variants.present? %>
         <div class="card mt-3">
           <h1 class="h3 card-header">Variants</h1>
