Fix n+1 query when loading collection images in admin index

--- a/app/views/admin/forest/shopify/collections/index.html.erb
+++ b/app/views/admin/forest/shopify/collections/index.html.erb
@@ -31,7 +31,7 @@
     </thead>
 
     <tbody>
-      <% @collections.each do |collection| %>
+      <% @collections.includes(:media_item).each do |collection| %>
         <tr>
           <% if Forest::Shopify::Collection.statusable? %>
             <td><%= status_indicator collection %></td>
