--- a/app/views/admin/forest/shopify/products/_form.html.erb
+++ b/app/views/admin/forest/shopify/products/_form.html.erb
@@ -37,28 +37,7 @@
           </div>
         </div>
       </div>
-      <% if @product.metafields.present? %>
-        <div class="card mt-3">
-          <h1 class="h3 card-header">Metafields</h1>
-          <div class="card-body">
-            <div class="form-inputs">
-              <div class="row small-gutters">
-                <div class="col-md-12">
-                  <div class="row small-gutters mb-n3">
-                    <% @product.metafields.each do |key, value| %>
-                      <div class="col-4 mb-3">
-                        <strong><%= key.titleize %></strong>
-                        <br>
-                        <%= value %>
-                      </div>
-                    <% end %>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
+      <%= render 'admin/forest/shopify/shared/metafields_card', metafields: @product.metafields if @product.metafields.present? %>
       <% if @product.media_items.present? %>
         <div class="card mt-3">
           <h1 class="h3 card-header">Images</h1>
