--- a/app/views/admin/forest/shopify/collections/_form.html.erb
+++ b/app/views/admin/forest/shopify/collections/_form.html.erb
@@ -32,7 +32,7 @@
                 <% if @collection.media_item.present? %>
                   <label>Collection image</label>
                   <br>
-                  <%= link_to image_tag(@collection.media_item.attachment_url(:medium)), edit_admin_media_item_path(@collection.media_item), class: 'blank-link mb-3 d-inline-block', target: '_blank' %>
+                  <%= link_to image_tag(@collection.media_item.attachment_url(:medium)), edit_admin_media_item_path(@collection.media_item), class: 'blank-link mb-3 d-inline-block', target: '_blank', style: 'width: 200px;' %>
                 <% end %>
               </div>
             </div>
